# foundation

./: .gitignore  README.md  bootstrap.sh  gitconfig  justfile  precommit.toml  pyproject.toml  pyrightconfig.json  tmux.conf  vimrc
assets/: gitignore  vimrc
python/: pyproject.toml
python/colors/: colors.py
python/iafisher_foundation/colors/: colors.py
python/iafisher_foundation/command/: __init__.py  command.py  tests.py
python/iafisher_foundation/prelude/: __init__.py  prelude.py
python/iafisher_foundation/scripting/: scripting.py
python/iafisher_foundation/tabular/: __init__.py  tabular.py  tests.py
python/iafisher_foundation/timehelper/: __init__.py  tests.py  timehelper.py
python/ian/colors/: __init__.py
python/ian/prelude/: __init__.py  prelude.py
python/ian/scripting/: __init__.py  scripting.py
python/prelude/: __init__.py  prelude.py
python/scripting/: __init__.py  scripting.py
shell/: bash_functions.sh  env
